css/styles.css
/* https://colorhunt.co/palette/162251 */

:root {
  --wine: #84073E;
  /* 132,7,62 */
  --wine-lighter: #a9094f;
  /* 169, 9, 79*/
  --wine-darker: #4c0424;
  /* 76, 4, 36  */
  --golden: #C18E28;
  /* 193, 142, 40 */
  --golden-lighter: #d6a23a;
  /* 214, 162, 58 */
  --golden-darker: #a17621;
  /* 161, 118, 33 */
  --teal: #118185;
  /* 17, 129, 133 */
  --teal-lighter: #15a3a8;
  /* 21, 163, 168 */
  --teal-darker: #0d5f62;
  /* 13, 95, 98 */
  --off-white: #EEECDD;
  /* 238, 236, 221 */
  --off-white-darker: #d4cfa9;
  --font-script: 'Great Vibes', cursive;
  --font-normal: dosis;
}

* {
  box-sizing: border-box;
}

body {
  font-family: dosis;
  font-weight: normal;
  background: var(--off-white);
}

a {
  text-decoration: none;
  color: inherit;
  cursor: pointer;
}

h1, h2, h3, h4, h5 {
  font-weight: normal;
}

header {
  display: none;
}

.container {
  width: 100%;
}

nav {
  background: linear-gradient(to top, var(--wine), black 95%);
  color: var(--off-white);
  box-shadow: 0 2px 8px 2px rgb(0, 0, 0, .5);
  z-index: 10;
  border-bottom: 4px solid var(--wine-darker);
  transition: all .2s;
}

nav div {
  text-align: center;
}

nav h2 {
  font-family: var(--font-script);
  font-size: 2.15em;
  margin-bottom: 10px;
}

nav ul {
  width: 100%;
  display: inline-block;
  padding: 10px;
  margin-top: 0;
  padding-inline-start: 0;
  margin-block-start: 0;
  margin-block-end: 0;
  list-style-type: none;
}

nav li {
  display: inline-block;
  font-size: 1.15em;
  padding: 5px 8px;
  border-bottom: 1px transparent solid;
}

nav li:first-of-type {
  display: none;
}

nav li {
  transition: border .3s ease-in;
}

nav li:hover {
  border-bottom: 1px var(--golden) solid;
  color: var(--golden);
}

.sticky {
  position: fixed;
  top: 0;
  width: 100vw;
}

main {
  margin-top: 90px;
  padding-top: 50px;
  width: 100%;
}

main .heading {
  text-align: center;
  margin: 80px 0;
}

.heading h2 {
  padding: 15px 45px;
  border-radius: 8px;
  font-size: 2.2rem;
  background: var(--wine);
  color: white;
  text-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
  display: inline-block;
  margin: 0 auto;
  box-shadow: 2px 2px 4px 2px rgba(76, 4, 3, .5);
  border: 4px solid var(--wine-darker);
  border-bottom: 4px solid black;
}

.projects, .skills {
  color: white;
  /* height: 450px; */
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin: 35px 0 50px;
  /* background: rgb(75, 75, 75); */
  /* box-shadow: 0 0 5px 5px rgba(100, 100, 100, .5) */
}

.projects {
  height: 450px;
}

.card {
  background: var(--golden-lighter);
  width: 70%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  border-radius: 8px;
  border: 4px solid var(--golden-darker);
  border-bottom: 4px solid black;
  box-shadow: 2px 2px 4px 2px rgba(161, 118, 33, .7);
  transition: .3s ease-out;
}

.hidden-right, .hidden-left {
  display: none;
  visibility: hidden;
  opacity: 0;
  position: absolute;
}

.hidden-right {
  right: -100px;
}

.hidden-left {
  left: -100px;
}

.visible {
  visibility: visible;
  right: static;
  left: static;
  opacity: 1;
  display: flex;
}

/* .projects .card:first-of-type {
  display: flex;
} */

/* .card.visible:first-of-type {
  margin-left: 7%;
}

.card.visible:last-of-type {
  margin-right: 7%;
} */

.card .title {
  text-align: center;
  font-size: 1.4em;
  text-shadow: 1px 1px 2px rgb(0, 0, 0, .5);
  width: 80%;
  margin: 0 auto 27px;
  padding: 18px;
  border-bottom: 3px solid var(--off-white);
}

.card .content {
  text-align: center;
  width: 90%;
  margin: 0 auto;
}

.card img {
  display: block;
  width: 65%;
  border-radius: 8px;
  border: 4px solid var(--off-white);
  margin: 0 auto;
  box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, .3)
}

.card .project-skills {
  margin: 0 auto 12px;
  margin-top: auto;
}

.card .project-skills ul, .skills ul {
  display: block;
  margin: 0 auto;
  padding: 0;
}

.card .project-skills li, .skills li {
  display: inline-block;
  padding: 0 5px;
  font-size: 2em;
  color: var(--off-white);
}

.skills li {
  padding: 8px 10px;
  font-size: 2.3em;
}

.tooltip {
  position: relative;
}

.tooltip-text {
  visibility: hidden;
  width: 190px;
  background: var(--wine);
  color: var(--off-white);
  font-size: .55em;
  text-align: center;
  padding: 4px 0;
  border-radius: 8px;
  box-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
  position: absolute;
  z-index: 2;
  top: -30px;
  left: 10px;
}

.tooltip:hover .tooltip-text {
  visibility: visible;
}

.skills img {
  width: 90%;
}

.skills {
  justify-content: space-between;
}

.skills .card {
  margin: 0 10px;
  /* height: 450px; */
}

#skills-list, #training, #responsive {
  flex-grow: 1;
  width: 80%;
  margin: 10px auto;
}

#responsive {
  order: -1;
}

.card#responsive .content {
  margin-bottom: 12px;
}

#training h3 {
  font-size: 1.4em;
  margin: 10px;
}

#training a {
  width: 50px;
}

#training span {
  font-size: .75em;
  color: rgb(75, 75, 75);
  font-style: italic;
}

#training svg {
  width: 50px;
  height: 50px;
  transition: .2s ease-in-out
}

#training svg.disabled {
  fill: rgb(125, 125, 125);
}

#training svg:hover {
  fill: var(--wine);
  transform: scale(1.2);
}

#training svg.disabled:hover {
  cursor: default;
  fill: rgb(125, 125, 125);
  transform: scale(1)
}

#training .content div {
  border: 3px var(--off-white) solid;
  border-radius: 8px;
  padding: 0;
  padding-bottom: 10px;
  margin-bottom: 10px;
}

#training .content>a {
  color: var(--wine);
  transition: .2s;
  border-bottom: 2px transparent solid;
  font-size: 1.2em;
}

#training .content>a:hover {
  color: var(--off-white);
  border-bottom: 2px var(--wine) solid;
}

#about, #contact, #skills, #projects {
  padding-top: 120px;
  margin-top: -40px;
}

.about, .contact {
  display: flex;
  align-items: center;
  width: 75%;
  margin: 35px auto;
  flex-direction: column;
}

.me img {
  border-radius: 50%;
  border: 6px solid var(--wine-darker);
  box-shadow: 2px 2px 5px rgba(0, 0, 0, .7);
  width: 200px;
}

.about-me {
  border-left: 6px solid var(--wine);
  padding-left: 20px;
  font-size: 1.25em;
}

.about-me p {
  line-height: 1.25;
}

.contact {
  flex-wrap: wrap;
}

.contact p {
  flex: 1 100%;
  text-align: center;
  margin: 8px auto;
  font-weight: bold;
}

.contact p {
  font-size: 1.25em;
  vertical-align: middle;
  line-height: 30px;
  margin: 8px 0;
}

.contact p svg {
  padding: 0;
  width: 25px;
  height: 25px;
  margin-right: 10px;
}

.contact .email {
  display: flex;
  margin: 0 auto;
  align-items: center;
  justify-content: center;
}

.contact ul {
  display: flex;
  justify-content: center;
  margin: 30px auto;
  flex: 1 100%;
  padding: 0;
}

.contact li {
  display: inline-block;
  border: 2px var(--wine) solid;
  width: 50px;
  height: 50px;
  border-radius: 8px;
  margin: 0 12px;
  transition: .2s;
  box-shadow: 2px 2px 3px rgba(0, 0, 0, .7);
}

.contact svg {
  width: 50px;
  height: 50px;
  padding: 8px;
  fill: var(--wine-darker);
  transition: .3s;
}

.contact li:hover {
  background: var(--wine);
}

.contact ul svg:hover {
  fill: white;
}

/* Project Navigation Arrows */

.projects svg {
  fill: var(--wine);
  position: absolute;
  width: 45px;
  top: calc(50% - 67.5px);
  transition: .2s ease-in;
}

.projects svg.right {
  right: 1%;
}

.projects svg.left {
  left: 1%;
  transform: rotate(180deg);
}

.projects svg.right:hover {
  transform: scale(1.3);
  opacity: .6;
  cursor: pointer;
}

.projects svg.left:hover {
  transform: scale(1.3) rotate(180deg);
  opacity: .6;
  cursor: pointer;
}

.projects svg.right:active {
  transform: scale(.9);
  opacity: 1;
  fill: var(--wine-darker)
}

.projects svg.left:active {
  transform: scale(.9) rotate(180deg);
  opacity: 1;
  fill: var(--wine-darker)
}

.projects svg.disabled:hover {
  transform: scale(1);
  cursor: not-allowed;
  opacity: 1;
  fill: var(--wine);
}

.projects svg.left.disabled:hover {
  transform: scale(1) rotate(180deg);
}

/* These Media Queries keep the header above the computer monitor at most heights */

@media (min-width: 768px) {
  * {
    scroll-behavior: smooth;
  }
  .container {
    width: 90%;
    margin: 0 auto;
  }
  header {
    display: block;
    font-family: 'Great Vibes', cursive;
    background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(25, 25, 25, 0) 25%), url('../images/desktop_screens.jpg') center/cover no-repeat;
    /* background-image: url('../images/desktop_screens.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center; */
    width: 100vw;
    height: 100vh;
    text-align: center;
  }
  header {
    position: relative;
  }
  header h1 {
    font-family: 'Great Vibes', cursive;
    margin: 0;
    padding: 65px 0 0;
    color: white;
    font-size: 5.2rem;
    font-weight: normal;
    text-shadow: 3px 3px 2px rgba(132, 7, 62, .8)
  }
  header hr {
    width: 335px;
    border: 1px white solid;
    margin: 0 auto;
  }
  header h3 {
    font-family: dosis;
    margin: 0;
    padding: 25px 40px;
    color: white;
    font-size: 2.1rem;
    font-weight: normal;
    text-shadow: 3px 1px 5px rgba(0, 0, 0, .5)
  }
  header svg {
    width: 90px;
    transform: rotate(90deg);
    position: absolute;
    bottom: 45px;
    right: calc(50% - 45px);
    /* opacity: .6; */
    transition: .2s ease-in;
  }
  header svg:hover {
    opacity: .4;
    transform: scale(1.2) rotate(90deg);
  }
  nav div {
    text-align: initial;
  }
  nav h2 {
    margin-bottom: 28.5px;
  }
  nav ul {
    margin-top: 16px;
    float: right;
  }
  nav li {
    padding: 9px 20px;
  }
  nav li:first-of-type {
    display: inline-block;
    font-size: 1.25em;
  }
  main {
    margin-top: 0px;
  }
  .projects, .skills {
    flex-wrap: wrap;
    flex-direction: row;
  }
  .card {
    width: 45%;
  }
  .skills .card {
    height: 450px;
  }
  .projects svg.left {
    left: -5%;
  }
  .projects svg.right {
    right: -5%;
  }
  .projects svg {
    width: 55px;
    top: calc(50% - 27.5px);
  }
  #responsive img {
    max-width: 580px;
  }
  #skills-list, #training {
    width: 45%;
  }
  #skills-list {
    margin-right: 5%;
  }
  .skills li {
    padding: 12px 10px;
  }
  .about {
    width: 70%;
  }
  .me img {
    margin-right: 50px;
  }
}

@media (min-width: 1024px) {
  .card {
    width: 30%;
  }
  /* .projects .card, .projects .card:last-of-type {
    display: flex;
  } */
  #skills-list, #responsive {
    margin-right: 2%;
  }
  #skills-list .content {
    width: 98%;
  }
  #skills-list, #training {
    flex-grow: 1;
    width: 25%;
  }
  #responsive {
    flex-grow: 2;
    width: 40%;
    order: initial;
  }
  .skills li {
    font-size: 2.4em;
    padding: 12px 8px;
  }
  .about {
    flex-direction: row;
    width: 90%;
  }
  .contact p {
    font-size: 1.5em;
  }
}

@media(min-width: 1200px) {
  .about {
    width: 75%;
  }
}

/* These @media are specifically to make sure the header text doesn't over lap the 
  image when the height is reduced.
*/

@media (max-height: 800px) {
  header h1 {
    font-size: 3.8rem;
    padding: 50px 0 0;
  }
  header h3 {
    font-size: 1.6rem;
    padding: 15px 20px;
  }
}

@media (max-height: 600px) {
  header h1 {
    padding: 25px 0 0;
  }
  header h3 {
    padding: 15px 20px;
  }
}

.clearfix::after {
  content: "";
  clear: both;
  display: table;
}

